# fever

./: .gitignore  Makefile  README.md  ast_analysis.py  dependency_tracker.py  hot_reload_roadmap.html  import_hook.py  main.py  module_a.py  module_b.py  module_c.py  other_test_module.py  pyproject.toml  test.py  test_module.py  test_module_a.py  test_module_b.py  test_module_c.py
example/: example_module.py  main_loop.py  with_watcher.py
src/: classes.html
src/fever/: __init__.py  ast_analysis.py  cache.py  call_tracker.py  cli.py  core.py  dependency_tracker.py  hooks.py  registry.py  types.py  utils.py  watcher.py
src/fever/tui/: builder_ui.py  debugger_ui.py  trace_replay_ui.py
src/fever/tui/styles/: builder_ui.css  ui.css
src/fever/tui/widgets/: call_graph.py  function_stats.py  locals_panel.py  logger.py  nodes_panel.py  pdb_panel.py  terminal.py  terminal_panel.py  tracer.py  welcome_modal.py
src/mitaine/: __init__.py  ast_analysis.py  call_tracker.py  dependency_tracker.py
tests/: test_cache.py  test_call_tracker.py  test_cli.py  test_core.py  test_dependency_tracker.py  test_hot_reloading.py  test_import_hook.py  test_registry.py  test_types.py  test_utils.py  test_watcher.py
tests/test_imports/: main.py  module_a.py  module_b.py  module_c.py  module_d.py
tests/test_imports/submodules/: module_e.py
tests/test_imports/submodules/subsub/: module_f.py
