[project]
name = "fever"
version = "0.0.1"
description = "A very capable and fully transparent hot-reloading system with advanced caching."
readme = "README.md"
authors = [
    { name = "Theo Morales", email = "theo.morales.fr@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["networkx", "matplotlib", "pdbpp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers"
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
