[project]
name = "fever"
version = "0.0.7"
description = "The pace of Jupyter Notebooks in your existing code base. The power of pdb++ in a visual interface. Python hot code reloading on steroids."
readme = "README.md"
authors = [
    { name = "Theo Morales", email = "theo.morales.fr@gmail.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "networkx",
    "matplotlib",
    "pdbpp",
    "rich>=14.0.0",
    "pywatchman>=3.0.0",
    "pympler>=1.1",
    "typer",
    "textual>=6.6.0",
    "netext>=0.3.1",
    "duper>=0.0.6",
    "pyte>=0.8.2",
    "ipython>=8.38.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers"
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "requests>=2.32.5",
]

[project.scripts]
fever = "fever.cli:app"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
